--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 actionlib==1.14.0
 angles==1.9.13
+blinker==1.8.2
 bondpy==1.8.6
 camera-calibration==1.17.0
 camera-calibration-parsers==1.12.0
 catkin==0.8.10
+click==8.1.7
 contourpy==1.1.1
 controller-manager==0.20.0
 controller-manager-msgs==0.20.0
@@ -13,6 +15,7 @@ diagnostic-analysis==1.11.0
 diagnostic-common-diagnostics==1.11.0
 diagnostic-updater==1.11.0
 dynamic-reconfigure==1.7.3
+flask==3.0.3
 fonttools==4.53.0
 gazebo-plugins==2.9.2
 gazebo-ros==2.9.2
@@ -23,12 +26,16 @@ genmsg==0.6.0
 gennodejs==2.0.2
 genpy==0.6.15
 image-geometry==1.16.2
+importlib-metadata==7.2.0
 importlib-resources==6.4.0
 interactive-markers==1.12.0
+itsdangerous==2.2.0
+jinja2==3.1.4
 joint-state-publisher==1.15.1
 joint-state-publisher-gui==1.15.1
 kiwisolver==1.4.5
 laser-geometry==1.6.7
+MarkupSafe==2.1.5
 matplotlib==3.7.5
 message-filters==1.16.0
 numpy==1.24.4
@@ -108,5 +115,6 @@ tf2-kdl==0.7.7
 tf2-py==0.7.7
 tf2-ros==0.7.7
 topic-tools==1.16.0
+werkzeug==3.0.3
 xacro==1.14.18
 zipp==3.19.2
